--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <style>
         @font-face {
             font-family:Digital ;
-            src: url('digital-7\ \(mono\ italic\).ttf') format('truetype');
+            src: url('digital-7\ \(mono\ italic\).ttf') format('truetype') ;
         }
         .calculator-container{
         width: 400px;
@@ -94,6 +94,9 @@
             <button class="btn bg-tomato">+</button>
             <button class="btn bg-tomato">=</button>
          </div>
+    </div>
+    <div>
+        <h1>this calculator is made by me....</h1>
     </div>
 </body>
 </html>
