--- a/index.html
+++ b/index.html
@@ -1,102 +1,147 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <title>
         calculator project
     </title>
+    <script>
+        function pressButton(buttonvalue) {
+            console.log(buttonvalue)
+            let calText = document.querySelector(".input-screen").value + buttonvalue + "";
+            document.querySelector(".input-screen").value = calText;
+        }
+        function calculate() {
+            let calText = document.querySelector(".input-screen").value;
+            document.querySelector(".input-screen").value = eval(calText);
+        }
+        function clearscreen() {
+            document.querySelector(".input-screen").value = "";
+        }
+        function del() {
+            let calText = document.querySelector(".input-screen").innerText;
+            document.querySelector(".input-screen").value= -1 ;
+        }
+        function on(){
+            document.querySelector(".input-screen").style.background="bisque"; 
+        }
+        function off(){
+            document.querySelector(".input-screen").style.background="#636361";
+            document.querySelector(".input-screen") .style.border="1px solid #636361";
+            document.querySelector(".input-screen").innerText = '.';
+            console.log(buttonvalue)= none;
+        }   
+    </script>
     <style>
         @font-face {
-            font-family:Digital ;
-            src: url('digital-7\ \(mono\ italic\).ttf') format('truetype') ;
+            font-family: Digital;
+            src: url('digital-7\ \(mono\ italic\).ttf') format('truetype');
         }
-        .calculator-container{
-        width: 400px;
-        background-color: black;    
-        padding: 20px;
-        border-radius : 10px ;
-        border: black 2px solid;
-        display: block;
-        margin: auto;
-        margin-top: 150px;
-        box-shadow: 10px 10px 10px  grey;
+
+        .calculator-container {
+            width: 400px;
+            background-color: black;
+            padding: 20px;
+            border-radius: 10px;
+            border: black 2px solid;
+            display: block;
+            margin: auto;
+            margin-top: 100px;
+            box-shadow: 10px 10px 10px grey;
         }
-        .row{
-            display:flex;
+
+        .row {
+            display: flex;
             flex-direction: row;
             justify-content: space-between;
             margin-top: 10px;
         }
-        .btn{
+
+        .btn {
             height: 60px;
             width: 80px;
-            font-size: 50px;
-            font-weight: bold;
-            background-color: white;
-            border-radius:8px;
-            border: 2px solid powderblue;
-        }
-        .btn:hover{
-            cursor: pointer;
-            box-shadow: 0px 2px 10px wheat;
-            transition:0.5s ;
-        }
-        .bg-tomato{
-            background-color:tomato;
-            color: white;
-            border: white  2px solid;
-        }
-        .input-screen{
-        width: 100%;
-        height:70px;
-        margin-bottom: 20px;
-        font-size: 70px;
-        border-radius: 10px;
-        background-color: bisque;
-        font-family: digital ;
-        }
-        .input-screen:hover{ 
-        box-shadow: 0px 5px 10px pink ;
-        }
-        .brand{
-            color:white;
             font-size: 20px;
             font-weight: bold;
+            background-color: white;
+            border-radius: 8px;
+            border: 2px solid powderblue;
+        }
+
+        .btn:hover {
+            cursor: pointer;
+            box-shadow: 0px 2px 10px wheat;
+            transition: 0.5s;
+        }
+
+        .bg-tomato {
+            background-color: tomato;
+            color: white;
+            border: white 2px solid;
+        }
+
+        .input-screen {
+            width: 100%;
+            height: 70px;
+            margin-bottom: 20px;
+            font-size: 40px;
+            font-weight: 400;
+            border-radius: 10px;
+            background-color: bisque;
+            font-family: digital;
+        }
+
+        .input-screen:hover {
+            box-shadow: 0px 5px 10px pink;
+        }
+
+        .brand {
+            color: white;
+            font-size: 20px;
+            font-weight: 400;
         }
     </style>
 </head>
+
 <body>
     <div class="calculator-container">
         <span class="brand">CODIANS-RTC</span>
         <div class="row">
-            <input type="text" id="input" class="input-screen"/>
-        </div> 
+            <input type="text" id="input" class="input-screen" />
+        </div>
         <div class="row ">
-            <button class="btn">7</button>
-            <button class="btn">8</button>
-            <button class="btn">9</button>
-            <button class="btn bg-tomato">/</button>
-         </div>
-         <div class="row">
-            <button class="btn">4</button>
-            <button class="btn">5</button>
-            <button class="btn">6</button>
-            <button class="btn bg-tomato">*</button>
-         </div>
-         <div class="row">
-            <button class="btn">1</button>
-            <button class="btn">2</button>
-            <button class="btn">3</button>
-            <button class="btn bg-tomato">-</button>
-         </div>
-         <div class="row">
-            <button class="btn">0</button>
-            <button class="btn bg-tomato">.</button>
-            <button class="btn bg-tomato">+</button>
-            <button class="btn bg-tomato">=</button>
-         </div>
+            <button class="btn" onclick="clearscreen()">c</button>
+            <button class="btn" onclick="off()">Off</button>
+            <button class="btn" onclick="on()">ON</button>
+            <button class="btn" onclick="del()">Del</button>
+        </div>
+        <div class="row ">
+            <button class="btn" onclick="pressButton(7)">7</button>
+            <button class="btn" onclick="pressButton(8)">8</button>
+            <button class="btn" onclick="pressButton(9)">9</button>
+            <button class="btn bg-tomato" onclick="pressButton('/')">/</button>
+        </div>
+        <div class="row">
+            <button class="btn" onclick="pressButton(4)">4</button>
+            <button class="btn" onclick="pressButton(5)">5</button>
+            <button class="btn" onclick="pressButton(6)">6</button>
+            <button class="btn bg-tomato" onclick="pressButton('*')">*</button>
+        </div>
+        <div class="row">
+            <button class="btn" onclick="pressButton(1)">1</button>
+            <button class="btn" onclick="pressButton(2)">2</button>
+            <button class="btn" onclick="pressButton(3)">3</button>
+            <button class="btn bg-tomato" onclick="pressButton('-')">-</button>
+        </div>
+        <div class="row">
+            <button class="btn" onclick="pressButton(7)">0</button>
+            <button class="btn bg-tomato" onclick="pressButton('.')">.</button>
+            <button class="btn bg-tomato" onclick="pressButton('+')">+</button>
+            <button class="btn bg-tomato" onclick="calculate()">=</button>
+        </div>
     </div>
     <div>
-        <h1>this calculator is made by me....</h1>
+        <h1>this calculator is made by me</h1>
     </div>
 </body>
+
 </html>
