--- a/index.html
+++ b/index.html
@@ -28,12 +28,11 @@
         }
         function off(){
             document.querySelector(".input-screen").style.background="#636361";
-            document.querySelector(".input-screen") .style.border="1px solid #636361";
-            document.querySelector(".input-screen").innerText = '.';
-            console.log(buttonvalue)= none;
+            document.querySelector(".input-screen").style.border="1px solid #636361";
         }   
     </script>
-    <style>
+
+ <style>
         @font-face {
             font-family: Digital;
             src: url('digital-7\ \(mono\ italic\).ttf') format('truetype');
@@ -100,7 +99,8 @@
             font-size: 20px;
             font-weight: 400;
         }
-    </style>
+</style>
+
 </head>
 
 <body>
@@ -110,10 +110,10 @@
             <input type="text" id="input" class="input-screen" />
         </div>
         <div class="row ">
-            <button class="btn" onclick="clearscreen()">c</button>
+            <button class="btn" onclick="clearscreen()">AC</button>
             <button class="btn" onclick="off()">Off</button>
             <button class="btn" onclick="on()">ON</button>
-            <button class="btn" onclick="del()">Del</button>
+            <button class="btn" onclick="del()">DEL</button>
         </div>
         <div class="row ">
             <button class="btn" onclick="pressButton(7)">7</button>
