--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         }
         function calculate() {
             let calText = document.querySelector(".input-screen").value;
-            document.querySelector(".input-screen").value = eval(calText);cd
+            document.querySelector(".input-screen").value = eval(calText);
         }
         function clearscreen() {
             document.querySelector(".input-screen").value = "";
@@ -31,7 +31,7 @@
             document.querySelector(".input-screen").style.border="1px solid #636361";
             document.querySelector(".input-screen").value = "";
             document.getElementsByClassName(btn).disabled = true;
-            alert("Button has been disabled.");
+            alert("calculator is off now...");
         }   
     </script>
 
